Test: resizing recipecard-title as doesn't display correctly on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,6 +38,7 @@ nav .brand-logo {
 /* STYLING FOR RECIPE CARDS */
 
 .recipecard-title {
+    font-size: 12px;
     font-weight: bold;
 }
 
